@@ -1,5 +1,7 @@
 # version 0.66
 
+ - Updated query and user-group name pattern.
+
 # version 0.65.2
 
 2022-03-03
